[design] 初步实现虚拟服务方法的参数转换.